# chai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  VISION.md  flake.nix
.agents/: README.md  (+18 more)
crates/adapters/matrix/: Cargo.toml
crates/adapters/matrix/src/: lib.rs
crates/adapters/signal/: Cargo.toml
crates/adapters/signal/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  file.rs  gateway.rs  gateway_conn.rs  git.rs  init.rs  logs.rs  main.rs  profile.rs  resolve.rs  session.rs  sessions.rs  skill.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  main.rs
crates/desktop/src/app/: types.rs
crates/desktop/src/app/screens/: agent.rs  chat.rs  config.rs  context.rs  files.rs  gateway.rs  info.rs  logging.rs  logs.rs  mod.rs  settings.rs  skills.rs  status.rs  tools.rs
crates/desktop/src/app/state/: chat.rs  env.rs  gateway.rs  logs.rs  mod.rs  skills.rs
crates/desktop/src/app/ui/: dashboard.rs  header.rs  layout.rs  mod.rs  readonly_code.rs  sessions.rs  sidebar.rs  spacing.rs  view_toggle.rs
crates/lib/: Cargo.toml
crates/lib/bundled/skills/cargo/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/cargo/scripts/: hint-check.sh  hint-test.sh  resolve-cargo-path.sh
crates/lib/bundled/skills/files/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/files-read/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/files-read/scripts/: hint-not-found.sh  sanitize-ls.sh
crates/lib/bundled/skills/files/scripts/: hint-not-found.sh  hint-overwrite.sh  hint-search-results.sh
crates/lib/bundled/skills/git/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/git-read/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/git-read/scripts/: hint-not-repo.sh
crates/lib/bundled/skills/git-remote/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/git-remote/scripts/: hint-pull-errors.sh  hint-push-errors.sh  resolve-clone-path.sh
crates/lib/bundled/skills/kb/: SKILL.md  tools.json
crates/lib/bundled/skills/kb-daily/: tools.json
crates/lib/bundled/skills/kb-frontmatter/: SKILL.md  tools.json
crates/lib/bundled/skills/kb-read/: SKILL.md  tools.json
crates/lib/bundled/skills/kb-wikilink/: SKILL.md  tools.json
crates/lib/bundled/skills/logs/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/notes/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/notes-daily/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/notes-frontmatter/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/notes-read/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/notes-wikilink/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/rss/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/skills/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/bundled/skills/skills-design/: SKILL.md
crates/lib/bundled/skills/skills-read/: SKILL.md  allowlist.json  execution.json  tools.json
crates/lib/config/bundled/: README.md
crates/lib/config/skills/devtools/: SKILL.md  tools.json
crates/lib/config/skills/devtools-read/: SKILL.md  tools.json
crates/lib/config/skills/files/: SKILL.md  tools.json
crates/lib/config/skills/files-read/: SKILL.md  tools.json
crates/lib/config/skills/git/: SKILL.md  tools.json
crates/lib/config/skills/git-read/: SKILL.md  tools.json
crates/lib/config/skills/git-remote/: SKILL.md  tools.json
crates/lib/config/skills/kb/: SKILL.md  tools.json
crates/lib/config/skills/kb-daily/: SKILL.md  tools.json
crates/lib/config/skills/kb-frontmatter/: SKILL.md  tools.json
crates/lib/config/skills/kb-read/: tools.json
crates/lib/config/skills/kb-wikilink/: SKILL.md  tools.json
crates/lib/config/skills/kb-wikilink-write/: SKILL.md  tools.json
crates/lib/config/skills/notelink/: SKILL.md  tools.json
crates/lib/config/skills/notesmd/: SKILL.md  tools.json
crates/lib/config/skills/notesmd-cli/: SKILL.md  tools.json
crates/lib/config/skills/notesmd-cli-daily/: SKILL.md  tools.json
crates/lib/config/skills/notesmd-daily/: SKILL.md  tools.json
crates/lib/config/skills/obsidian/: SKILL.md  tools.json
crates/lib/config/skills/obsidian-daily/: SKILL.md  tools.json
crates/lib/config/skills/rss/: SKILL.md  tools.json
crates/lib/config/skills/skillgen/: SKILL.md  tools.json
crates/lib/config/skills/skills/: SKILL.md  tools.json
crates/lib/config/skills/skills-design/: SKILL.md
crates/lib/config/skills/skills-read/: SKILL.md
crates/lib/config/skills/skillval/: SKILL.md  tools.json
crates/lib/config/workspace/: AGENTS.md
crates/lib/skills/: README.md
crates/lib/skills/obsidian/: SKILL.md
crates/lib/src/: agent.rs  agent_ctx.rs  config.rs  device.rs  exec.rs  init.rs  lib.rs  logging.rs  profile.rs  routing.rs  session.rs
crates/lib/src/channels/: inbound.rs  matrix.rs  matrix_stub.rs  mod.rs  registry.rs  signal.rs  signal_stub.rs  telegram.rs
crates/lib/src/gateway/: matrix_routes.rs  mod.rs  pairing.rs  protocol.rs  server.rs
crates/lib/src/llm/: lm_studio.rs  mod.rs  nim.rs  ollama.rs
crates/lib/src/orchestration/: catalog.rs  choice.rs  delegate.rs  dispatch.rs  mod.rs  model.rs  policy.rs  workers_context.rs
crates/lib/src/providers/: hf.rs  lms.rs  mod.rs  nim.rs  ollama.rs  openai.rs  openai_compat.rs  vllm.rs
crates/lib/src/skills/: descriptor.rs  loader.rs  lockfile.rs  mod.rs  validation.rs  versioning.rs
crates/lib/src/tools/: generic.rs  mod.rs  notesmd_cli.rs  obsidian.rs  post_process.rs
crates/lib/src/tools/generic/: argv.rs  deny.rs  mod.rs  output.rs  sandbox.rs  validate.rs
crates/lib/tests/: gateway_health.rs
crates/lib/tests/fixtures/loader_tool_test/: SKILL.md  active  tools.json
crates/spike/: Cargo.toml  README.md
(+306 files in other folders)
