[package]
name = "cli"
version = "0.2.0"
edition = "2021"
description = "Chai CLI"
license = "GPL-3.0"

[[bin]]
name = "chai"
path = "src/main.rs"

[features]
default = []
matrix = ["lib/matrix"]
signal = ["lib/signal"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
lib = { path = "../lib" }
log = "0.4"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.29"
unicode-normalization = "0.1"
