[package]
name = "desktop"
version = "0.0.0"
edition = "2021"
description = "Chai Desktop"
license = "LGPL-3.0"

[[bin]]
name = "chai-desktop"
path = "src/main.rs"

[features]
default = []
matrix = ["lib/matrix"]

[dependencies]
lib = { path = "../lib" }
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }

# WebSocket client for gateway status
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde_json = "1"

# Error handling
anyhow = "1"

eframe = { version = "0.24", features = ["default"] }
