[package]
name = "lib"
version = "0.0.0"
edition = "2021"
description = "Shared library for Chai CLI and Chai Desktop"
license = "LGPL-3.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "sync", "signal"] }
axum = { version = "0.7", features = ["json", "ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
thiserror = "1"
log = "0.4"
dirs = "5"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = "2"
getrandom = "0.2"
include_dir = "0.7"
