[package]
name = "lib"
version = "0.2.0"
edition = "2021"
description = "Chai Library"
license = "GPL-3.0"

[features]
default = []
matrix = ["dep:matrix-channel"]
signal = ["dep:signal-channel"]

[dependencies]
anyhow = "1"
anstyle = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "ws"] }
base64 = "0.22"
dirs = "6"
dotenvy = "0.15"
ed25519-dalek = "2"
env_logger = "0.11"
fs2 = "0.4"
futures-util = "0.3"
getrandom = "0.4"
include_dir = "0.7"
log = "0.4"
matrix-channel = { path = "../adapters/matrix", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.11"
signal-channel = { path = "../adapters/signal", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "sync", "signal"] }
uuid = { version = "1", features = ["v4"] }
