[package]
name = "chai-spike"
version = "0.4.0"
edition = "2021"
description = "Spike binaries for Matrix and Signal integration research"
license = "GPL-3.0"
publish = false

[[bin]]
name = "matrix-probe"
path = "src/bin/matrix_probe.rs"

[[bin]]
name = "signal-probe"
path = "src/bin/signal_probe.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
