[package]
name = "matrix-channel"
version = "0.0.0"
edition = "2021"
description = "Matrix adapter for Chai (matrix-sdk) — optional dependency of lib"
license = "LGPL-3.0"

[dependencies]
log = "0.4"
matrix-sdk = { version = "0.16", features = ["sqlite", "e2e-encryption", "bundled-sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
