[package]
name = "signal-channel"
version = "0.3.0"
edition = "2021"
description = "Signal channel adapter"
license = "GPL-3.0"

[dependencies]
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
